# RT-Image-Processing

./: .gitignore  CMakeLists.txt  README.md  helper.txt
Camera/: CMakeLists.txt  Camera.cpp
Camera/newBuild/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Camera.sln  Camera.vcxproj  Camera.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
Camera/newBuild/GeneralLib/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  GeneralLib.sln  GeneralLib.vcxproj  GeneralLib.vcxproj.filters  cmake_install.cmake  sqlite3.vcxproj  sqlite3.vcxproj.filters
Camera/newBuild/Release/: Configurations.json
GUI/: APIController.h  ServerAPIController.h  mainwindow.cpp
GeneralLib/: CMakeLists.txt  CameraController.h  CaptureAndPreprocess.cpp  CaptureAndPreprocess.h  Configurations.json  DBManager.cpp  FrameProcessor.cpp  FrameProcessor.h  FrameReceiver.cpp  FrameReceiver.h  FrameSender.cpp  FrameSender.h  FrameWithDetails.cpp  FrameWithDetails.h  JsonManager.cpp  JsonManager.h  LogManager.cpp  YoloDetection.cpp  YoloDetection.h
GeneralLib/include/: API.h  CameraAPI.h  ServerAPI.h
GeneralLib/protos/: service.proto
Server/: CMakeLists.txt  ServerAPIController.h  configurationmanager.cpp  configurationmanager.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
Tests/: CMakeLists.txt  Tests.cpp  cameraTest.cpp
client/: CMakeLists.txt  CoreAPI.h  checkComboBox.cpp  checkComboBox.h  configsManager.cpp  configsManager.h  configurationmanager.cpp  configurationmanager.h  flowlayout.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
client/custom/: checkComboBox.cpp  flowlayout.h
client/src/: logreader.cpp  logreader.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  settings.cpp  settings.h
client/src/custom/: VideoPlayer.cpp  VideoPlayer.h  checkComboBox.cpp  checkComboBox.h  flowlayout.h  logreader.cpp  logreader.h
client/tests/: CMakeLists.txt  client_tests.cpp  cmake_install.cmake
docs/: Doxyfile
docs/html/: index.html  md__r_e_a_d_m_e.html  pages.html
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  searchdata.js
libs/: CMakeLists.txt  ClientService.cpp  ClientService.h  Configurations.json  Frame.h  FrameProcessor.cpp  FrameProcessor.h  JsonManager.cpp  JsonManager.h  LogManager.cpp  ServerService.cpp  ServerService.h  YoloDetection.cpp  YoloDetection.h
libs/include/cctv/: core.h
libs/protos/: service.proto
libs/src/: ClientService.cpp  ClientService.h  DBManager.h  Frame.cpp  FrameProcessor.cpp  FrameProcessor.h  JsonManager.cpp  JsonManager.h  LogManager.cpp  LogManager.h  Settings.cpp  Settings.h  ThreadSafeQueue.h  YoloDetection.cpp  YoloDetection.h
resources/: Roadmap.h
server/: CMakeLists.txt  Camera.cpp  ServerService.cpp  ServerService.h
tests/: CMakeLists.txt  Tests.cpp
